--- a/src/components/RelatedProducts/relatedproducts.module.css
+++ b/src/components/RelatedProducts/relatedproducts.module.css
@@ -1,3 +1,7 @@
+.relatedProducts {
+    margin: 50px auto;
+}
+
 .relatedProducts .articles {
     display: grid;
     grid-template-columns: repeat(auto-fit, 200px);
@@ -17,4 +21,10 @@
 
 .relatedProducts span {
     font-weight: 800;
+}
+
+@media screen and (min-width: 700px) {
+    .relatedProducts {
+        margin: 100px auto;
+    }
 }
